# mce550-robotics-assignment

./: README.md
simple_robot/: CMakeLists.txt  package.xml
simple_robot/launch/: robot.launch
simple_robot/src/: motion_controller.py  obstacle_detector.py
simple_robot_cpp/: CMakeLists.txt  package.xml
simple_robot_cpp/launch/: robot.launch
simple_robot_cpp/src/: motion_controller.cpp  obstacle_detector.cpp  process_image.cpp
simple_robot_msgs/: CMakeLists.txt  package.xml
simple_robot_msgs/srv/: ChangeVelocity.srv  DriveVelocity.srv
simple_robot_py/: CMakeLists.txt  package.xml
simple_robot_py/launch/: robot.launch
simple_robot_py/src/: motion_controller.py  obstacle_detector.py
