<?xml version="1.0"?>
<package format="2">
  <name>simple_robot_py</name>
  <version>0.0.0</version>
  <description>The simple_robot_py package</description>

  <maintainer email="mohamad@moudallal.xyz">Mohamad Moudallal</maintainer>

  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gemoetry_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>